--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
    <meta name="description" content="Get the most positive or negative tweets about a subject" />
    <meta name="keywords" content="tweet, twitter, sentiment analysis, positive, negative, statistics" />
    <title>Twitter Sentiment Analysis</title>
+   
+   
+   <style>
+	body {
+	    background-color: linen;
+	    padding: 5%;
+	    margin: 0;
+	    text-align: center;
+	}
+	h1 {
+		font-family: Verdana, sans-serif;
+		color: gray;
+	}
+	input[type='text'] {
+		width: 40%;
+		margin-right: 15px;
+	}
+	input[type='radio'] {
+		margin-top: 10px;
+	}
+	</style>
 </head>
 <body>
-	<h1>Twitter Sentiment Analysis</h1>
+	<h1>Twitter Sentiment Analysis
+</h1>
 	<form action="">
 	  <input type="text" name="query" placeholder="Type your query"><input type="submit" value="Search">
 	  <br />
@@ -17,5 +39,3 @@
 	  <input type="radio" name="type" value="negative">Get negative tweets
 	  <input type="radio" name="type" value="statistics">Get sentimental statistics
 	</form>
-</body>
-</html>
