Styling for the header of the results

--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -15,10 +15,10 @@
 		    padding: 5%;
 		    margin: 0;
 		    text-align: center;
+		    color: #555;
 		}
 		h1 {
 			font-family: Verdana, sans-serif;
-			color: gray;
 			margin-top :0;
 		}
 		input[type='text'] {
@@ -27,11 +27,12 @@
 		}
 		input[type='radio'] {
 			margin-top: 10px;
+			margin-right: 5px;
+			margin-left: 15px;
 		}
 		#results {
 			width: 100%;
 			margin-top: 5%;
-			border-top: solid 5px white;
 		}
 		.singleResult {
 			border: solid 1px gray;
@@ -46,6 +47,10 @@
 		}
 		#results .date {
 			float: right;
+		}
+		#results th {
+			border: solid 5px white;
+			border-bottom: none;
 		}
 	</style>
 </head>
