--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -15,7 +15,7 @@
 			margin: 0px;
 			padding: 0px;
 			width: 100%;
-			height: 10%;
+			height: 50px;
 			position: absolute;
 			border-top: 5px solid yellow;
 			border-bottom: 5px solid yellow;
@@ -77,9 +77,13 @@
 		}
 		#results .user {
 			float: left;
+			font-style: italic;
+			font-size: 10px;
 		}
 		#results .date {
 			float: right;
+			font-style: italic;
+			font-size: 10px;
 		}
 		#results th {
 			border-bottom: 2px solid yellow;
