Make the references to external files computer-independent

--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -89,7 +89,7 @@
 			border-bottom: 2px solid yellow;
 		}
 		#footer {
-			position: relative;
+			position: fixed;
 			bottom:0px;
 			width:100%;
 			background-color: black;
