--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -75,6 +75,10 @@
 			margin-bottom: 50px;
 			color: #666;
 		}
+		.positiveTweets {
+			border: 1px solid black; 
+			padding: 10px;
+		}
 		.singleResult {
 			border: solid 1px gray;
 			margin-top: 2px;
@@ -169,9 +173,12 @@
 		  <input type="radio" name="type" value="positive" [#nested]>Get positive tweets
 		  <input type="radio" name="type" value="negative" [#nested]>Get negative tweets
 		</form>
-		<table id="results">
-			[#nested]
-		</table>
+		
+		<div class="positiveTweets">
+			<table id="results">
+				[#nested]
+			</table>
+		</div>
 	</div>
 	
 	<div id="footer">
