--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -61,13 +61,14 @@
 			margin-right: 15px;
 			color: #BBB;  
 			height: 25px; 
+			color: black;
 		}
 		input[type='radio'] {
 			margin-top: 10px;
 			margin-right: 5px;
 			margin-left: 15px;
 		}
-		#results {
+		.results {
 			width: 80%;
 			margin: auto;
 			margin-top: 5%;
@@ -78,28 +79,39 @@
 		.positiveTweets {
 			border: 1px solid black; 
 			padding: 10px;
+			width: 85%;
+			margin: auto;
+			background: #CCC;
+			margin-bottom: 100px;
 		}
 		.singleResult {
 			border: solid 1px gray;
-			margin-top: 2px;
+			margin-top: 10px;
+			padding: 30px;
 			width: 100%;
 			box-shadow: 3px 3px 2px #888888;
 		}
 		.singleResult:hover {
 			border-color: black;
 		}
-		#results .user {
+		.results .user {
 			float: left;
 			font-style: italic;
 			font-size: 10px;
+			padding-left: 5px;
 		}
-		#results .date {
+		.results .date {
 			float: right;
 			font-style: italic;
 			font-size: 10px;
+			padding-right: 5px;
 		}
-		#results th {
+		.results .content {
+			text-align: center;
+		}
+		.results th {
 			border-bottom: 2px solid #e06018;
+			margin-bottom: 50px;
 		}
 		#footer {
 			position: fixed;
@@ -156,6 +168,17 @@
 			position:relative;
 			top:1px;
 		}
+		.nav {
+			width: 85%;
+			text-align: center;
+			margin: auto;
+			margin-top: 60px;
+		}
+		.nav td {
+			background: black;
+			margin-right: 2px;
+			margin-left: 2px;
+		}
 
 	</style>
 </head>
@@ -174,9 +197,7 @@
 		  <input type="radio" name="type" value="negative" [#nested]>Get negative tweets
 		</form>
 		
-		
-		<table id="results">
-			<table width="100%">
+		<table class="nav">
 				<tr>
 					<td>
 						Tweets found: ...
@@ -189,10 +210,11 @@
 					</td>
 				</tr>
 			</table>
-			<div class="positiveTweets">
+		<div class="positiveTweets">
+			<table class="results">		
 				[#nested]
-			</div>
-		</table>
+			</table>
+		</div>
 	</div>
 	
 	<div id="footer">
