--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -195,6 +195,14 @@
 			width: 32%;
 			float: left;
 		}
+		.queryExpention a {
+			text-decoration: none;
+			color: #CCC;
+		}
+		.queryExpention a:hover {
+			color: black;
+			background-color: yellow;
+		}
 
 	</style>
 </head>
