One dbConnection stable

--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -81,7 +81,8 @@
 			padding: 10px;
 			width: 85%;
 			margin: auto;
-			background: #CCC;
+			background: white;
+			color: black;
 			margin-bottom: 50px;
 		}
 		.singleResult {
