--- a/src/main/java/webFrondEnd/mainPage.html
+++ b/src/main/java/webFrondEnd/mainPage.html
@@ -198,7 +198,7 @@
 		}
 		.queryExpention a {
 			text-decoration: none;
-			color: #CCC;
+			color: #EEE;
 		}
 		.queryExpention a:hover {
 			color: black;
